# example-opentelemetry

./: .env  .gitignore  CONTRIBUTE.md  Makefile  README.md
.github/workflows/: docker-publish.yml
.run/: collector-down.run.xml  collector-up.run.xml  emitter-dart-dice.run.xml  emitter-dart-macos.run.xml  emitter-dart-web.run.xml  up.run.xml
Make/: application.mk  collector.mk  emitter.mk  receiver.mk
Make/helper/: colors.mk  help.mk  ui.mk
examples/collectors/datadog-agent/: .env.dist  compose.yml
examples/collectors/kubernetes-daemonset/: README.md  compose.yml
examples/collectors/kubernetes-daemonset-datadoglike/: README.md  compose.yml
examples/collectors/opentelemetry/: README.md  compose.yml
examples/collectors/opentelemetry-contrib/: .gitignore  README.md  compose.yml
examples/emitter/nodejs/: Dockerfile  README.md  app.ts  compose.yml  dice.ts  instrumentation.ts  instrumentation_collector.ts  instrumentation_oltp.ts  package.json
examples/emitter/rust/: Cargo.toml
examples/emitter/rust/src/: main.rs
examples/emitters/cs/: compose.yml
examples/emitters/dart/: compose.yml
examples/emitters/docker/: README.md
examples/emitters/go/: compose.yml
examples/emitters/nodejs/: app.ts  compose.yml  instrumentation.ts  instrumentation_console.ts  pnpm-lock.yaml
examples/emitters/postgres/: README.md
examples/emitters/python/: compose.yml
examples/emitters/redis/: README.md
examples/exporter/grafana/: .gitignore  (+2 more)
iaac/opentelemetry/: Makefile  compose.yml
iac/docker/: Makefile  compose.yml
iac/k8s/: opentelemetry-collector.yml
(+119 files in other folders)
